plex-token-generator/ingressroute-plex-token-generator.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-token-generator.${dns_domain}
  namespace: plex-token-generator
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex-token-generator.${dns_domain}`)
      kind: Rule
      services:
        - name: plex-token-generator
          kind: Service
          port: 8080
